# dotConnect

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: ci.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/database/: actor.rs  mod.rs
src-tauri/src/server/: handler.rs  mod.rs
src/components/Connection/: ChoiceScreen.tsx  HostScreen.tsx  JoinScreen.tsx  LoginScreen.tsx
src/components/Layout/: ChatArea.tsx  InputBar.tsx  Sidebar.tsx  UserList.tsx
src/components/Voice/: AudioRenderer.tsx  ScreenShareView.tsx  VoiceControls.tsx
src/hooks/: useWebSocket.ts
src/stores/: chatStore.ts  connectionStore.ts  userStore.ts  voiceStore.ts
src/types/: index.ts
