[package]
name = "dotconnect"
version = "0.1.0"
description = "dotConnect — Discord-like LAN messenger"
authors = ["you"]
edition = "2021"

[lib]
name = "dotconnect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
rusqlite = { version = "0.35", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
local-ip-address = "0.6"
log = "0.4"
env_logger = "0.11"
